Project structure was changed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(SimpleArchiver C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(SimpleArchiver main.c)
+add_executable(SimpleArchiver main.c cmake-build-debug/source/zziper.c cmake-build-debug/source/zziper.h)
